--- a/Welcome/src/main/resources/application.properties
+++ b/Welcome/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.parameter-name=mediaType
+spring.mvc.contentnegotiation.media-types.pdf=application/pdf
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
